<resources>
    <string name="app_name">DroidCafe</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="DroidDessert">Droid Dessert</string>
    <string name="DonutDesc">Hey this is a donut, very yummy!</string>
    <string name="froyoDesc">I love froyo! Especially fruit flavors!</string>
    <string name="iceCreamDesc">I am not a fan of ice cream sandwiches! Gross</string>

    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="nameLabel">Name:</string>
    <string name="enter_name">Enter Name</string>
    <string name="addressLabel">Address:</string>
    <string name="enter_address">Enter Address</string>
    <string name="phoneLabel">Phone:</string>
    <string name="phoneHint">Enter Phone Number</string>
    <string name="note">Note:</string>
    <string name="noteHint">Enter Note</string>
    <string name="choose_delivery_type">Choose Delivery Type</string>
    <string name="same_day_delivery">Same Day Delivery</string>
    <string name="next_day_delivery">Next Day Delivery</string>
    <string name="in_store_pickup">In Store Pickup</string>
    <string name="cart">Cart</string>
    <string name="action_contact">Contact</string>
    <string name="order">Order</string>
    <string name="action_status">Status</string>
    <string name="action_favorites">Favorites</string>

    <string name="action_order_message">You Selected Order</string>
    <string name="action_status_message">You Selected Status</string>
    <string name="action_favorites_message">You Selected Favorites</string>
    <string name="action_contact_message">You Selected Contact</string>

</resources>